--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: easy_dynamic_theme
 description: A new flutter plugin project.
 version: 0.0.1
-author:
-homepage:
+homepage: "https://github.com/rlazom/easy_dynamic_theme.git"
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^0.5.6+3
   flutter_web_plugins:
     sdk: flutter
 
