--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: easy_dynamic_theme
 description: Automatically get your OS defined Theme (Dynamic), force your prefered one (Light / Dark) and persist your choice in the device.
-version: 2.2.0
+version: 2.3.0
 homepage: "https://github.com/rlazom/easy_dynamic_theme"
 
 environment:
@@ -10,11 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.5
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 
   #  Mock library for Dart
-  mockito: ^5.0.7
+  mockito: ^5.4.0
